syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "CombatTypeArgument.proto";
import "ForwardType.proto";


message CombatInvokeEntry {
	bytes combat_data = 13;
	CombatTypeArgument argument_type = 15;
	ForwardType forward_type = 6;
}