syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AttackResult.proto";


message EvtBeingHitInfo {
	uint32 frame_num = 2;
	uint32 peer_id = 14;
	AttackResult attack_result = 3;
}